[package]
name = "esketit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
env_logger = "0.9"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "cookies"], default-features = false }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.5"
url = "2.2.2"
xdg = "2.2"
