[package]
name = "peerberry"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
env_logger = "0.9"
clap = { version = "4.4", features = ["derive"]}
log = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false}
serde_derive = "1.0"
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.5"
totp-rs = { version = "5", features = ["otpauth"] }
url = "2.2.2"
axum = "0.6"
xdg = "2.2"
