[package]
name = "tfa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.6"
clap = { version = "4.4", features = ["derive"]}
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
totp-rs = { version = "5", features = ["otpauth"] }
